feat(project)add generate visual image
